--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1563,8 +1563,8 @@ need access to RAPPORT then let \director~know.
   \item I have carefully read through the entire lab manual, and I have
     checked off all of the above items to indicate that I have carried
     out the indicated tasks.
- % \item I have talked to \director~or \coordinator~about any supplemental modules,
-  and plan to complete those assigned.
+% \item I have talked to \director~or \coordinator~about any supplemental modules,
+%  and plan to complete those assigned.
   \item I will send a digital copy (PDF) of the final two pages of
     this manual, including checked-off list items, my digital
     signature, and today's date, to \href{mailto:contextualdynamics@gmail.com}{contextualdynamics@gmail.com}.
