--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -304,7 +304,7 @@ certain rights, and you agree to take on certain responsibilities.
 \newthought{Recourse}
 
 \noindent If you feel your rights as a lab member have been, or are in danger of
-being, violated, it is your duty to report those violations to a
+being, violated, it is your duty to report those violations immediately to a
 senior staff member (e.g.\ \director, Department Chair, Deans, police,
 Title IX coordinator, ombudsman, etc.).  Similarly, if you notice
 others endangering others' rights, or neglecting their
