--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -826,7 +826,7 @@ meetings:
   (cc'ing \director) so that you can be added to the lab groups.  Also
   send your preferred email address so that you can be added to the
   lab Slack account.}The very first thing you need to do is to get set
-up the following platforms, which will enable you to interact with the
+up on the following platforms, which will enable you to interact with the
 rest of the lab, download and use the lab's software packages, and
 accomplish various necessary administrative tasks:
 \begin{enumerate}
