--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -789,26 +789,19 @@ meetings:
     topics.  You are encouraged to attend any that seem interesting.
     Attendees: all interested lab and non-lab Dartmouth community
     members.
-    \marginnote{\texttt{TASK:} If you are a paid lab employee, or if
-      you would like to submit weekly snippets, email \director~to get
-      added to the Howdy script.}
-    \item \textbf{Howdy weekly snippets.} Each week (via Slack), all
-      paid employees must fill out a ``weekly snippet'' with brief
-      answers to the following questions:
+    
+    \item \textbf{Weekly snippets.} Each week, all
+      paid employees must fill out a ``weekly snippet'' Google Form 
+      with brief answers to the following questions:
       \begin{enumerate}
-      \item What did you work on last week?
-      \item What do you plan to work on this upcoming week?
-      \item What is impeding your progress?
-      \item Do you want to set up a meeting with \director?  (If so, a
-        link is provided to schedule a meeting via YouCanBook.Me.)
+      \item What did you work on over this past week?
+      \item What are you planning to work on this coming week?
+      \item What is impeding your progress (if anything)?
+      \item Anything else you'd like to add?
       \end{enumerate}
+      Weekly snippets are sent out (via Slack) each Monday at 9 AM.
       Whereas weekly snippets are required for all paid employees,
-      they are optional for all other lab members.  To be added to the
-      weekly snippet schedule, email \director.  Being added to the
-      weekly snippet schedules means that you will receive a link via
-      the ``Howdy'' survey bot (through Slack) each Monday at 9am.
-      Your answers are then compiled into reports that
-      \director~receives each Wednesday at 10 AM.  If you are an
+      they are optional for all other lab members.  If you are an
       unpaid employee but are likely to request a letter of
       recommendation, weekly snippets are a good way for me to
       maintain a detailed sense of what you are working on from week
@@ -823,7 +816,7 @@ meetings:
 \noindent
 \marginnote{\texttt{TASK:} Create (free) Google, Trello, and GitHub
   accounts.  Send your addresses and/or usernames to \coordinator~
-  (cc'ing \director) so that you can be added to the lab groups.  Also
+  and \director~so that you can be added to the lab groups.  Also
   send your preferred email address so that you can be added to the
   lab Slack account.}The very first thing you need to do is to get set
 up the following platforms, which will enable you to interact with the
@@ -1361,7 +1354,7 @@ If your machine is running Docker Toolbox, a legacy version of Docker, then acce
 \begin{itemize}
 \item For issues related to our lab's fileserver, seek assistance from \director.
 
-\item For issues with other lab-owned equipment (e.g.~computers, research equipment, etc.) \coordinator~ or the senior lab member actively using the equipment should be your first-sought resource.
+\item For issues with other lab-owned equipment (e.g.~computers, research equipment, etc.) \coordinator~or the senior lab member actively using the equipment should be your first-sought resource.
 
 \item For issues with Dartmouth IT, \href{help@dartmouth.edu}{open a ticket} with the Information, Technology, and Consulting office, or contact \href{mailto:Andrew.C.Knutsen@Dartmouth.edu}{Andrew Knutsen}.
 
@@ -1542,9 +1535,6 @@ need access to RAPPORT then let \director~know.
   \item I am an unpaid or salaried employee, or I am an hourly
     employee and have gotten myself set up on Kronos to track my paid
     hours.
-  \item I am a paid lab member and have coordinated with
-    \director~about getting added to the weekly snippets Howdy script,
-    or I am an unpaid lab member.
   \item I have submitted a photograph (of myself, or a
     representative scene or object) along with a brief (2-3 sentence),
     professionally worded biography, to be included on the lab
