added perceptual dynamics to list of active protocols

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1482,6 +1482,10 @@ need access to RAPPORT then let \director~know.
     \item \textbf{Network dynamics in human epilepsy (STUDY00029400).}
       Hospital protocol used for studying network dynamics inferred
       via electrocorticographic activity in epilepsy patients.
+    \item \textbf{Perceptual and Memory Dynamics (STUDY00031514).}
+    Used for studies investigating the relationship between perceptual and
+    memory metrics and symptoms associated with common psychiatric disorders.
+    
    \end{enumerate}
 
  \newthought{List of inactive protocols}
