added CITI training to checklist

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -884,29 +884,29 @@ need to complete an online tutorial through the \href{https://about.citiprogram.
 {Collaborative Institutional Training Initiative (CITI) Program}.
 
 \noindent All lab members are required to complete CITI's \textbf{Group 2: Social/Behavioral 
-Basic Course} module.  To complete the course, you will need to:
+Basic Course} module.  To complete the module, you will need to:
 \begin{enumerate}
- \marginnote{\texttt{NOTE:} If you have conducted research before through a class or
- another lab, you may already have completed the \textbf{Group 2: Social/Behavioral 
+ \marginnote{\texttt{NOTE:} If you have previously conducted research through a 
+ class or another lab, you may already have completed the \textbf{Group 2: Social/Behavioral 
 Basic Course} module.  If your certificate is valid (i.e., it is less than 3 years old), you may
-send it to \coordinator~without completing the course again.}
+send it to \coordinator~without completing the module again.}
 \item Create an account on \href{https://about.citiprogram.org}{CITI's website}.
     If you are a Dartmouth student or employee, choose Dartmouth College as your
     organization affiliation and use your \textit{@Dartmouth.edu} email address to create
-    your account.  Dartmouth will cover the fee for your course.
+    your account.  Dartmouth will cover your registration fee.
 \item Select \textbf{Group 2: Social/Behavioral Basic Course} as your registration course.
-    If you also need to complete the biomedical course, you will be able to add it
-    after completing the social/behavioral course.
-\item Read/watch the the course material and complete the questions at the end of
+    If you also need to complete the biomedical module, you will be able to add it
+    after completing the social/behavioral module.
+\item Read/watch the the material and complete the questions at the end of
     the module.  You will need to achieve a score of at least an 80\% to pass.
 \end{enumerate}
  \marginnote{\texttt{NOTE:} If you will be working on a project where data is collected
 from DHMC patients, you may need to complete the \textbf{Group 1: Biomedical Basic 
-Course} module \textit{in addition} to the social/behavioral course.  If you will be working
+Course} module \textit{in addition} to the social/behavioral module.  If you will be working
 on a NSF-funded project, you may also need to complete the \textbf{Responsible Conduct
 of Research (RCR)} module.}
 
-\noindent Once you have finished the course, send your \textbf{Completion
+\noindent Once you have finished the training module, send your \textbf{Completion
 Certificate} to \coordinator.  To access your certificate:
 \begin{enumerate}
 \item Sign into your CITI account and select \textbf{Records} at the top of your 
@@ -1581,6 +1581,8 @@ need access to RAPPORT then let \director~know.
   \item I have been added to the lab's 1password account if I am a
     senior lab member, or I have not been added because I am a junior
     lab member.
+  \item I have completed the required CITI program module(s) and have sent my 
+    Completion Certificate(s) to \coordinator.
   \item I am an unpaid or salaried employee, or I am an hourly
     employee and have gotten myself set up on Kronos to track my paid
     hours.
