--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -194,7 +194,7 @@ relevant \texttt{TASK} items.  You will also see non-task
 \texttt{NOTE} items; these provide helpful tips and additional
 commentary on the nearby text.
 
-\noindent This lab manual is meant to be a "living document." All lab members are welcome (and encouraged!) to submit edits that improve the content, clarity, and overall helpfulness of this document at any point throughout their tenure in the lab.
+This lab manual is meant to be a "living document." All lab members are welcome (and encouraged!) to submit edits that improve the content, clarity, and overall helpfulness of this document at any point throughout their tenure in the lab.
 
 \newthought{What should you do if you don't understand something?}
 
