--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -286,7 +286,7 @@ certain rights, and you agree to take on certain responsibilities.
     feedback with other lab members.
   \item You agree to clearly communicate and document your
     contributions to each research project (e.g.\ through GitHub
-    commits, reports, updates on Slack, etc.).
+    commits and issues, reports, updates on Slack, etc.).
   \item You agree to establish open lines of communication between
     yourself and other lab members, and to address concerns or issues promptly and
     directly with the relevant parties (to the extent that you feel
