--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -607,7 +607,7 @@ celebrated and accepted as part of the natural course of getting
 things done.  Mistakes are opportunities to learn and grow, and
 identifying or noticing mistakes should be celebrated as part of our
 growth as scientists.  However, real harm can come from failing to
-report mistakes soon enough.  There is a Chinese proverb that says
+report mistakes soon enough.  There is a proverb that says
 ``the best time to plant a tree was 20 years ago; the second best time
 is now.''  Analogously, the best time to identify and correct a
 mistake may have been in the past-- but the second best time is right now!
