add some miscellaneous administrata

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -928,7 +928,7 @@ to you when you return your key at the end of your tenure in the lab.
 If you are the last one in the lab for the day, please be sure to lock the
 door when you leave.
 
-
+If you are new to the department, make sure you are added to the PBS mailing list. If you are a graduate student, faculty or staff in the department, you will have a mailbox in the copy room on the first floor of Moore. A list of useful people in the department can be found \href{http://www.dartmouth-socialneurolab.com/useful-people}{here}.
 
 \newthought{Starting a new project}
 
