Fixed Typo Page 21
Changed "a only" to "only a".

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -979,7 +979,7 @@ it gives some sense of how you should be allocating your work time.
 
 If you are a part-time employee of the lab, prior experience has shown
 that you will most likely be able to make a meaningful contribution to
-a only single project at a time.  If you are a full-time employee, you
+only a single project at a time.  If you are a full-time employee, you
 may choose to devote some of your time to a secondary project (with
 the understanding that you will always prioritize your primary
 project).  If you want to change which project is your primary
