added ethics reporting info; plus WISE contact info

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1471,6 +1471,17 @@ If your machine is running Docker Toolbox, a legacy version of Docker, then acce
 \item Dartmouth's \href{https://sexual-respect.dartmouth.edu/}{Title IX office} (for concerns about sexual misconduct, harassment, or assault)
 
 \item \href{https://www.hanovernh.org/hanover-police-department}{Hanover Police} (if criminal activity is involved)
+
+\item \textbf{WISE}, a 24-hour crisis hotline for free and confidential services to address domestic and sexual violence and stalking. 866 348 9473.
+
+\end{itemize}
+
+\subsection{Ethics issues and reporting}
+\begin{itemize}
+
+\item Dartmouth's \href{https://www.dartmouth.ethicspoint.com}{Compliance and Ethics Hotline}. 888 497 0516.
+\item Safety and Security's \href{https://www.dartmouth.edu/~security/services/forms/anonreport.html}{anonymous reporting form}
+
 \end{itemize}
 
 % \clearpage
