--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1,5 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Tufte-Style Book (Minimal Template)
+% test comment
 % LaTeX Template
 % Version 1.0 (5/1/13)
 %
