--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -174,7 +174,7 @@ our general research approach and lab policies.
 \noindent \marginnote{\texttt{TASK:}
   Upon reading through this lab manual for the first time, please make
   at least one edit.  You could correct a typo, clarify something
-  that's unclear, add a comment, etc.  Also add (or comment on) an
+  that's unclear, add a comment, etc.  Also, add (or comment on) an
   issue via the
   \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues
     page}; you can use the existing issues to help decide what to
@@ -205,7 +205,7 @@ commentary on the nearby text.
 read in this manual, it is important that you \textit{ask another lab
   member for help}.  Every member of the lab brings their own unique
 knowledge base, training, life experiences, and perspectives.
-Respecting and celebrating those differences drives the science we do.
+Respecting and celebrating those differences drive the science we do.
 If you're new to the lab or new to a particular technique, you might
 feel like a newbie today---but chances are good that if you stick
 around for a bit someone else will be seeking your expert opinion
@@ -380,7 +380,7 @@ tenets:
 \item Value \textbf{individuals and interactions} over
   \textit{processes and tools}.  To be clear, processes and tools are
   important.  But we must always keep the user or consumer in mind.
-  In practice this means that a simpler (but potentially less
+  In practice, this means that a simpler (but potentially less
   comprehensive) tool or approach may be preferable in that it could
   be easier for a reader or user to make sense of.
 \item Value \textbf{working, intuitive tools and research products}
@@ -410,7 +410,7 @@ While there is value to the \textit{italicized} items, we value
   plans may no longer apply as your project progresses.  Your original
   hypotheses may be proven false.  Your assumptions may be
   incompatible with your data.  Learn from these challenges and grow
-  with them.  Avoid getting ``stuck'' by refusing to change, and allow your questions to follow where your data leads, rather than be constrained by your initial ideas.
+  with them.  Avoid getting ``stuck'' by refusing to change, and allow your questions to follow where your data lead, rather than be constrained by your initial ideas.
 
 \item We deliver research products frequently, from a couple of weeks to
   a couple of months, with a preference for shorter timescales.
@@ -633,13 +633,13 @@ happen immediately after you notice the mistake):
   restarting an experiment, re-reading reference text, etc.
 \item Create a GitHub issue describing the problem.  Provide
   information about how to reproduce the problem (if applicable), the
-  expected behavior, and the observed behavior.  Also provide any
+  expected behavior, and the observed behavior.  Also, provide any
   relevant system or environment information that may be necessary for
   reproducing the problem (e.g. details of the computing environment).
 \item Coordinate over Slack with your project team to formulate an
   action plan.
 \item Ask other lab members for help if the course of action isn't
-  clear.  Also try Google and/or Stack Exchange.
+  clear.  Also, try Google and/or Stack Exchange.
 \end{enumerate}
 
 \noindent \textit{If you think you might have caught a mistake but aren't
@@ -728,7 +728,7 @@ these roles on your project:
 \end{enumerate}
 By definition, collaborators play a minor role in the project, and they are not
 responsible for managing any aspect of the project.  They may become Team
-Members if their involvement increases.  Generally collaborators will
+Members if their involvement increases.  Generally, collaborators will
 be included in a paper's acknowledgement section, but collaborators
 are not normally co-authors.
 \end{enumerate}
