removed explicit trello instances

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -813,7 +813,7 @@ meetings:
 \newthought{Getting started in the lab}
 
 \noindent
-\marginnote{\texttt{TASK:} Create (free) Google, Trello, and GitHub
+\marginnote{\texttt{TASK:} Create (free) Google and GitHub
   accounts.  Send your addresses and/or usernames to \coordinator~
   and \director~so that you can be added to the lab groups.  Also
   send your preferred email address so that you can be added to the
@@ -826,13 +826,6 @@ accomplish various necessary administrative tasks:
   almost all not-in-person lab communications take place.  It provides
   an interface for asking questions, storing notes, and sharing
   ideas.
-
-\item \href{https://www.trello.com}{\textbf{Trello.}}
-  \marginnote{\texttt{TASK:} If you've never used Trello before, you
-    may find it useful to work through this
-    \href{https://trello.com/b/I7TjiplA/trello-tutorial}{Trello
-      tutorial}.}  This is used to manage all projects and tasks.  It
-  provides a way of tracking progress and impediments to progress.
 
 \item \href{https://www.github.com}{\textbf{GitHub.}}
   \marginnote{\texttt{TASK:} If you've never used GitHub (Git)
@@ -1575,8 +1568,6 @@ need access to RAPPORT then let \director~know.
    \item I have joined the lab's Slack account and agree to check it
   regularly (at least once per normal business day, excluding days I
   mark on the out-of-lab calendar).
-  \item I have created a Trello account and have been added to the appropriate lab
-    Trello group(s).
   \item I have been added to the lab's 1password account if I am a
     senior lab member, or I have not been added because I am a junior
     lab member.
