Spacing changes and new hyperlink to the IRB section

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -814,8 +814,7 @@ meetings:
 
 \noindent
 \marginnote{\texttt{TASK:} Create (free) Google and GitHub
-  accounts.  Send your addresses and/or usernames to \coordinator~
-  and \director~so that you can be added to the lab groups.  Also
+  accounts.  Send your addresses and/or usernames to \coordinator~and \director~so that you can be added to the lab groups.  Also
   send your preferred email address so that you can be added to the
   lab Slack account.}The very first thing you need to do is to get set
 up on the following platforms, which will enable you to interact with the
@@ -939,8 +938,8 @@ The general steps to starting a project are:
       for Slack} integration between your project and channel by sending a link to the GitHub repo in the project's Slack channel with a note asking to set up a Slack integration.
    \item If your project involves testing human participants, verify
      with \director~that your project is covered under an existing
-     active IRB protocol, and that you are listed on the protocol. (A list of
-active IRB protocols appears at the end of this lab manual.)
+     active IRB protocol, and that you are listed on the protocol. \hyperref[ch:irb]{(A list of
+active IRB protocols appears at the end of this lab manual.)}
 Depending on the protocol, you may need to complete one or more online
 training courses to become certified to run your experiment.  If no
 existing protocol is appropriate for your study, discuss with
@@ -1486,7 +1485,7 @@ If your machine is running Docker Toolbox, a legacy version of Docker, then acce
 
 
 
-\chapter{Internal Review Board (IRB) approvals}
+\chapter{Internal Review Board (IRB) approvals}\label{ch:irb}
 Experimental \marginnote{\texttt{TASK:} prior to running any non-lab-member
   participants in your study, you must coordinate with \coordinator~to
   verify that (a) your experiment has
