added additional clarification to CITI registration

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -885,7 +885,7 @@ send it to \coordinator~without completing the module again.}
     If you are a Dartmouth student or employee, choose Dartmouth College as your
     organization affiliation and use your \textit{@Dartmouth.edu} email address to create
     your account.  Dartmouth will cover your registration fee.
-\item Select \textbf{Group 2: Social/Behavioral Basic Course} as your registration course.
+\item Continue the registration process until you reach step 7. Select Human Subjects Research. Then select \textbf{Group 2: Social/Behavioral Basic Course} as your registration course.
     If you also need to complete the biomedical module, you will be able to add it
     after completing the social/behavioral module.
 \item Read/watch the the material and complete the questions at the end of
