--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -884,10 +884,11 @@ send it to \coordinator~without completing the module again.}
     If you are a Dartmouth student or employee, choose Dartmouth College as your
     organization affiliation and use your \textit{@Dartmouth.edu} email address to create
     your account.  Dartmouth will cover your registration fee.
-\item Complete registration by filling in the required information. Upon reaching step 7, when asked to select a training option, choose \textbf{"Human Subjects Research - Basic Courses"}. Finally, select \textbf{Group 2: Social/Behavioral Basic Course} as your registration course.
+\item Select \textbf{Group 2: Social/Behavioral Basic Course} as your registration course.
     If you also need to complete the biomedical module, you will be able to add it
     after completing the social/behavioral module.
-\item There are 16 required modules that need to be completed. Read/watch the the material and complete the quiz at the end of each module. You will need to achieve a score of at least an 80\% to pass. Quizzes may be reviewed and retaken.
+\item Read/watch the the material and complete the questions at the end of
+    the module.  You will need to achieve a score of at least an 80\% to pass.
 \end{enumerate}
  \marginnote{\texttt{NOTE:} If you will be working on a project where data is collected
 from DHMC patients, you may need to complete the \textbf{Group 1: Biomedical Basic 
