fixed typo on page 12

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -458,7 +458,7 @@ While there is value to the \textit{italicized} items, we value
   or Slack messages!  Help ``future you'' maintain peak efficiency
   through methodical and well-documented work.  (Note: don't spend
   \textit{too} much time on documentation; e.g. GitHub commits are
-  themselves often sufficient for documentation, since once can always
+  themselves often sufficient for documentation, since one can always
   compare different versions of a particular file.)
 
 \item Build projects around motivated individuals.  Give them the
