--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -511,7 +511,7 @@ While there is value to the \textit{italicized} items, we value
   \begin{itemize}
   \item What your goals are for the upcoming term (start-of-term
     meetings), or what you worked on over the prior term and how
-    well you feel you met your goals (end-of-term meetings)
+    well you feel you met your goals (end-of-term meetings).
   \item Reflections on how things are going in the lab (you will
     report how things have been going from your perspective, and will
     receive feedback about how things have been going from \director's
@@ -541,7 +541,10 @@ with a discussion of:
 \item What the overall ``story'' is
 \item The current status of various components of the project
   (e.g.\ data collection, analyses, figures, interpretation,
-  literature review, etc.)
+  literature 
+  
+  
+  , etc.)
 \item Who is a potential candidate for authorship on the paper
 \end{enumerate}
 
@@ -550,7 +553,7 @@ We draft papers in \LaTeX, either on GitHub or on \href{https://www.overleaf.com
 the browser).  Progress should be shared regularly via Slack.
 
 \subsection{Authorship guidelines}
-\marginnote{\texttt{TASK:} review the
+\marginnote{\texttt{TASK:} Review the
   \href{https://oir.nih.gov/sites/default/files/uploads/sourcebook/documents/ethical_conduct/guidelines-authorship_contributions.pdf}{NIH
     Guidelines for Authorship}.}  The Contextual Dynamics Lab follows
 the
@@ -979,7 +982,7 @@ members.
 \newthought{Scheduling}
 \label{sec: scheduling}
 
-\noindent \marginnote{\texttt{TASK:} email \coordinator~to request
+\noindent \marginnote{\texttt{TASK:} Email \coordinator~to request
   invites to each of the calendars below---the download links in the
   lab manual are read-only!}  Our lab's scheduling practices and
 policies are intended to facilitate lab member interactions between
