Changed the "TASK" on page 33 to instead be a "NOTE" because it is non-essential information and does not immediately concern new lab members.

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1488,7 +1488,7 @@ If your machine is running Docker Toolbox, a legacy version of Docker, then acce
 
 
 \chapter{Internal Review Board (IRB) approvals}\label{ch:irb}
-Experimental \marginnote{\texttt{TASK:} prior to running any non-lab-member
+Experimental \marginnote{\texttt{NOTE:} prior to running any non-lab-member
   participants in your study, you must coordinate with \coordinator~to
   verify that (a) your experiment has
   been approved by the IRB and (b) your name is
