added hrefs to phone numbers

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1472,14 +1472,14 @@ If your machine is running Docker Toolbox, a legacy version of Docker, then acce
 
 \item \href{https://www.hanovernh.org/hanover-police-department}{Hanover Police} (if criminal activity is involved)
 
-\item WISE, a 24-hour crisis hotline for free and confidential services to address domestic and sexual violence and stalking (866-348-9473)
+\item WISE, a 24-hour crisis hotline for free and confidential services to address domestic and sexual violence and stalking (\href{tel:18884970516}{866-348-9473})
 
 \end{itemize}
 
 \subsection{Ethics issues and reporting}
 \begin{itemize}
 
-\item Dartmouth's \href{https://www.dartmouth.ethicspoint.com}{Compliance and Ethics Hotline} (888-497-0516)
+\item Dartmouth's \href{https://www.dartmouth.ethicspoint.com}{Compliance and Ethics Hotline} (\href{tel:18884970516}{888-497-0516})
 \item Safety and Security's \href{https://www.dartmouth.edu/~security/services/forms/anonreport.html}{anonymous reporting form}
 
 \end{itemize}
