--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -541,10 +541,7 @@ with a discussion of:
 \item What the overall ``story'' is
 \item The current status of various components of the project
   (e.g.\ data collection, analyses, figures, interpretation,
-  literature
-
-
-  , etc.)
+  literature review, etc.)
 \item Who is a potential candidate for authorship on the paper
 \end{enumerate}
 
