added some text to the latex comment
"anywhere you would like"

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -173,7 +173,7 @@ our general research approach and lab policies.
 
 \noindent \marginnote{\texttt{TASK:}
   Upon reading through this lab manual for the first time, please make
-  at least one edit.  You could correct a typo, clarify something
+  at least one edit anywhere you would like.  You could correct a typo, clarify something
   that's unclear, add a comment, etc.  Also, add (or comment on) an
   issue via the
   \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues
