made a couple of grammar changes

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -867,9 +867,7 @@ your concerns to \director.
 
 \noindent Our lab's work seeks to answer questions about human memory.  As such,
 our research frequently involves interacting with (and analyzing data collected from)
-human subjects.  When conducting research with human subjects, it is essential
-to understand how to ethically and responsibly maintain participants' safety,
-comfort, and privacy.  Before beginning to work on any lab projects, you'll
+human subjects. It is essential to understand how to ethically and responsibly maintain the safety, comfort and privacy of participants when conducting research with human subjects. Before beginning work on any lab projects, you'll
 need to complete an online tutorial through the \href{https://about.citiprogram.org}
 {Collaborative Institutional Training Initiative (CITI) Program}.
 
@@ -1112,7 +1110,7 @@ official lab attendance policy:
   lab.
 
 \item If you are scheduled to present at a conference (i.e.\ you
-  submit an abstract and the abstract is accepted as a talk or
+  submit an abstract and it is accepted as a talk or
   poster), you are expected to attend the conference to present your
   work.  In the extremely rare event that an emergency situation
   arises that would prevent you from presenting as scheduled, you are
