clarified sentence on p11

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -412,7 +412,7 @@ While there is value to the \textit{italicized} items, we value
   incompatible with your data.  Learn from these challenges and grow
   with them.  Avoid getting ``stuck'' by refusing to change, and allow your questions to follow where your data lead, rather than be constrained by your initial ideas.
 
-\item We deliver research products frequently, from a couple of weeks to
+\item We deliver research products frequently, in intervals ranging from a couple of weeks to
   a couple of months, with a preference for shorter timescales.
   Before you have a concrete manifestation of your work (a figure, a
   statistic, a presentation, a paper draft, a dataset, a GitHub
