added lab members and alumni section

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -39,6 +39,7 @@
 % Improves figure scaling
 
 \usepackage[export]{adjustbox}
+%\usepackage{multicol}
 
 \usepackage{fancyvrb} % Allows customization of verbatim environments
 \fvset{fontsize=\normalsize} % The font size of all verbatim text can be changed here
@@ -1554,7 +1555,128 @@ need access to RAPPORT then let \director~know.
    personally identifiable data about our participants may ever be
    shared outside of the lab.}
 
-   \chapter{Checklist and signature page}
+
+
+\chapter{Lab members and alumni}
+\begin{fullwidth}
+\subsection{Current lab members}
+\newthought{PI}
+\bigskip
+
+\enskip Jeremy Manning
+
+
+\newthought{Graduate Students}
+\begin{multicols}{2}\raggedcolumns
+\begin{list}{\quad}{}
+\item Lucy Owen (2016 - )
+\item Kirsten Ziman (2017 - )
+\item Caroline Lee (2019 - )
+\end{list}
+\end{multicols}
+
+
+\newthought{Lab Manager}
+\bigskip
+
+\enskip Paxton Fitzpatrick (2018 - )
+
+
+\newthought{Research Assistants}
+\begin{multicols}{2}\raggedcolumns
+\begin{list}{\quad}{}
+\item Xinming Xu (2019 - )
+\item Maddy Lee (2020 - )
+\end{list}
+\end{multicols}
+
+
+\newthought{Undergraduate RAs}
+\begin{multicols}{2}\raggedcolumns
+\begin{list}{\quad}{}
+\item Will Baxley (2018 - )
+\item Alex Martinez (2018 - )
+\item Tudor Muntianu (2019 - )
+\item William Chen (2019 - )
+\item Shane Park (2019 - )
+\item Aaron Lee (2019 - )
+\item Shane Hewitt (2019 - )
+\item Sarah Park (2019 - )
+\item Chelsea Uddenberg (2020 - )
+\item Austin Zhang (2020 - )
+\item Greg Han (2020 - )
+\item Vivian Tran (2020 - )
+\item Luca Lit (2020 - )
+\item Esme Chen (2020 - )
+\item Chris Long (2020 - )
+\item Ethan Adner (2020 - )
+\item Kelly Rutherford (2020 - )
+\item Helen Lu (2020 - )
+\item Chris Jun (2020 - )
+\end{list}
+\end{multicols}
+
+\pagebreak
+
+\subsection{Lab alumni}
+\newthought{Postdoctoral Researchers}
+\begin{multicols}{2}\raggedcolumns
+\begin{list}{\quad}{}
+\item Andrew Heusser (2016 - 2018)
+\item Gina Notaro (2017 - 2018)
+\end{list}
+\end{multicols}
+
+
+\newthought{Lab Managers}
+\begin{multicols}{2}\raggedcolumns
+\begin{list}{\quad}{}
+\item Emily Whitaker (2017 - 2018)
+\item Kirsten Ziman (2016 - 2017)
+\end{list}
+\end{multicols}
+
+
+\newthought{Undergraduate RAs}
+\begin{multicols}{2}\raggedcolumns
+\begin{list}{\quad}{}
+\item Jessica Tin (2016)
+\item Gal Perlman (2016)
+\item Peter Tran (2016)
+\item Sheherzad Mohydin (2016)
+\item Joseph Finkelstein (2016)
+\item Aman Agarwal (2016)
+\item Clara Silvanic (2016)
+\item Jake Rost (2016)
+\item Aamuktha Porika (2016 - 2017)
+\item Allison Frantz (2016 - 2017)
+\item Marisol Tracy (2016 - 2017)
+\item Wei Liang Samuel Ching (2016 - 2017)
+\item Armando Ortiz (2017)
+\item Christina Lu (2017)
+\item Campbell Field (2016 - 2018)
+\item Bryan Bollinger (2017 - 2018)
+\item Stephen Satterthwaite (2017 - 2018)
+\item Ann Carpenter (2018)
+\item Kirsten Soh (2018)
+\item Rachael Chacko (2018)
+\item Darya Romanova (2018)
+\item Iain Sheerin (2018)
+\item Mustafa Nasir-Moin (2018)
+\item Seung Ju Lee (2018)
+\item Paxton Fitzpatrick (2017 - 2019)
+\item Maddy Lee (2016 - 2020)
+
+\end{list}
+\end{multicols}
+
+
+\end{fullwidth}
+
+
+
+
+\chapter{Checklist and signature page}
    By signing below, I certify that I have completed the following tasks:
 \begin{todolist}
   \item I have created a GitHub account and have been added to the appropriate lab
