--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -173,17 +173,7 @@ our general research approach and lab policies.
 \newthought{Who is this lab manual for?}
 
 \noindent \marginnote{\texttt{TASK:}
-  Upon reading through this lab manual for the first time, please make
-  at least one edit anywhere you would like.  You could correct a typo, clarify something
-  that's unclear, add a comment, etc.  Also, add (or comment on) an
-  issue via the
-  \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues
-    page}; you can use the existing issues to help decide what to
-  focus on for own edits if you'd like.  Importantly, be sure to fork the \href{https://github.com/ContextLab/lab-manual}{GitHub
-    repository}, make your edits on your personal fork, and submit
-  a pull request with your edits so that everyone can benefit. Be sure to recompile
-  the .tex file when you make your changes so that the .pdf file is updated, and the \LaTeX~compiler
-  catches any errors you may have made.}
+Upon reading through this lab manual for the first time, please update the document to include your name in the \hyperref[sec:curr_members]{Lab members} section. Importantly, be sure to fork the \href{https://github.com/ContextLab/lab-manual}{GitHub repository}, make your edit on your personal fork, and submit a pull request with your update. Be sure to recompile the \texttt{.tex} file after you make your changes so that the \texttt{.pdf} file is updated and the \LaTeX~compiler catches any errors you may have made. Also, feel free to make any additional changes you think would benefit other current or future lab members.  You could correct a typo, clarify something that’s unclear, add a comment or reference to a useful tool, etc.  If you'd like to get feedback on your idea first, create a \href{https://github.com/ContextLab/lab-manual/issues}{GitHub issue} describing your proposed change; you can use the existing issues to help decide what to focus on for own edits if you'd like.}
 Every new lab member should read
 the latest version of this lab manual in detail and reference it later
 as needed.  Periodically throughout the document, you will see margin
@@ -1557,9 +1547,9 @@ need access to RAPPORT then let \director~know.
 
 
 
-\chapter{Lab members and alumni}
+\chapter{Lab members and alumni}\label{ch:members}
 \begin{fullwidth}
-\subsection{Current lab members}
+\subsection{Current lab members}\label{sec:curr_members}
 \newthought{PI}
 \bigskip
 
