updated checklist to reflect changes

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1674,11 +1674,7 @@ need access to RAPPORT then let \director~know.
     the GitHub tutorials.
   \item I am proficient in \LaTeX, allowing me to edit and understand
   this lab manual's source code.
-  \item I have submitted one or more edits to the lab manual by making a
-  pull request to the
-  \href{https://github.com/ContextLab/lab-manual}{GitHub repository}.
-  \item I have added or commented on at least one issue on the lab manual's
-\href{https://github.com/ContextLab/lab-manual/issues}{GitHub issues page}.
+  \item I have submitted a pull request to the \href{https://github.com/ContextLab/lab-manual}{GitHub repository} that adds my name to the \hyperref[sec:curr_members]{lab members} section, along with any other updates I think would be helpful.
   \item I have access to the following lab calendars:
     Contextual Dynamics Lab, Out of lab, CDL Resources, CDL class
     schedule (if applicable), DHMC Meetings (if
