changed hyphens to en dashes

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1557,9 +1557,9 @@ need access to RAPPORT then let \director~know.
 \newthought{Graduate Students}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Lucy Owen (2016 - )
-\item Kirsten Ziman (2017 - )
-\item Caroline Lee (2019 - )
+\item Lucy Owen (2016 -- )
+\item Kirsten Ziman (2017 -- )
+\item Caroline Lee (2019 -- )
 \end{list}
 \end{multicols}
 
@@ -1567,14 +1567,14 @@ need access to RAPPORT then let \director~know.
 \newthought{Lab Manager}
 \bigskip
 
-\enskip Paxton Fitzpatrick (2018 - )
+\enskip Paxton Fitzpatrick (2018 -- )
 
 
 \newthought{Research Assistants}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Xinming Xu (2019 - )
-\item Maddy Lee (2020 - )
+\item Xinming Xu (2019 -- )
+\item Maddy Lee (2020 -- )
 \end{list}
 \end{multicols}
 
@@ -1582,25 +1582,25 @@ need access to RAPPORT then let \director~know.
 \newthought{Undergraduate RAs}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Will Baxley (2018 - )
-\item Alex Martinez (2018 - )
-\item Tudor Muntianu (2019 - )
-\item William Chen (2019 - )
-\item Shane Park (2019 - )
-\item Aaron Lee (2019 - )
-\item Shane Hewitt (2019 - )
-\item Sarah Park (2019 - )
-\item Chelsea Uddenberg (2020 - )
-\item Austin Zhang (2020 - )
-\item Greg Han (2020 - )
-\item Vivian Tran (2020 - )
-\item Luca Lit (2020 - )
-\item Esme Chen (2020 - )
-\item Chris Long (2020 - )
-\item Ethan Adner (2020 - )
-\item Kelly Rutherford (2020 - )
-\item Helen Lu (2020 - )
-\item Chris Jun (2020 - )
+\item Will Baxley (2018 -- )
+\item Alex Martinez (2018 -- )
+\item Tudor Muntianu (2019 -- )
+\item William Chen (2019 -- )
+\item Shane Park (2019 -- )
+\item Aaron Lee (2019 -- )
+\item Shane Hewitt (2019 -- )
+\item Sarah Park (2019 -- )
+\item Chelsea Uddenberg (2020 -- )
+\item Austin Zhang (2020 -- )
+\item Greg Han (2020 -- )
+\item Vivian Tran (2020 -- )
+\item Luca Lit (2020 -- )
+\item Esme Chen (2020 -- )
+\item Chris Long (2020 -- )
+\item Ethan Adner (2020 -- )
+\item Kelly Rutherford (2020 -- )
+\item Helen Lu (2020 -- )
+\item Chris Jun (2020 -- )
 \end{list}
 \end{multicols}
 
@@ -1608,8 +1608,8 @@ need access to RAPPORT then let \director~know.
 \newthought{Postdoctoral Researchers}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Andrew Heusser (2016 - 2018)
-\item Gina Notaro (2017 - 2018)
+\item Andrew Heusser (2016 -- 2018)
+\item Gina Notaro (2017 -- 2018)
 \end{list}
 \end{multicols}
 
@@ -1617,8 +1617,8 @@ need access to RAPPORT then let \director~know.
 \newthought{Lab Managers}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Emily Whitaker (2017 - 2018)
-\item Kirsten Ziman (2016 - 2017)
+\item Emily Whitaker (2017 -- 2018)
+\item Kirsten Ziman (2016 -- 2017)
 \end{list}
 \end{multicols}
 
@@ -1626,7 +1626,7 @@ need access to RAPPORT then let \director~know.
 \newthought{Research Assistants}
 \begin{multicols}{2}\raggedcolumns
 \begin{list}{\quad}{}
-\item Max Bluestone (2018 - 2019)
+\item Max Bluestone (2018 -- 2019)
 \end{list}
 \end{multicols}
 
@@ -1642,15 +1642,15 @@ need access to RAPPORT then let \director~know.
 \item Aman Agarwal (2016)
 \item Clara Silvanic (2016)
 \item Jake Rost (2016)
-\item Aamuktha Porika (2016 - 2017)
-\item Allison Frantz (2016 - 2017)
-\item Marisol Tracy (2016 - 2017)
-\item Wei Liang Samuel Ching (2016 - 2017)
+\item Aamuktha Porika (2016 -- 2017)
+\item Allison Frantz (2016 -- 2017)
+\item Marisol Tracy (2016 -- 2017)
+\item Wei Liang Samuel Ching (2016 -- 2017)
 \item Armando Ortiz (2017)
 \item Christina Lu (2017)
-\item Campbell Field (2016 - 2018)
-\item Bryan Bollinger (2017 - 2018)
-\item Stephen Satterthwaite (2017 - 2018)
+\item Campbell Field (2016 -- 2018)
+\item Bryan Bollinger (2017 -- 2018)
+\item Stephen Satterthwaite (2017 -- 2018)
 \item Ann Carpenter (2018)
 \item Kirsten Soh (2018)
 \item Rachael Chacko (2018)
@@ -1658,8 +1658,8 @@ need access to RAPPORT then let \director~know.
 \item Iain Sheerin (2018)
 \item Mustafa Nasir-Moin (2018)
 \item Seung Ju Lee (2018)
-\item Paxton Fitzpatrick (2017 - 2019)
-\item Maddy Lee (2016 - 2020)
+\item Paxton Fitzpatrick (2017 -- 2019)
+\item Maddy Lee (2016 -- 2020)
 \end{list}
 \end{multicols}
 \end{fullwidth}
