changed Attendance Policy subsection to newthought (#52)

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -968,9 +968,9 @@ members.
 \newthought{Scheduling}
 \label{sec: scheduling}
 
-\noindent \marginnote{\texttt{TASK:} Email \coordinator~to request
+\noindent\marginnote{\texttt{TASK:} Email \coordinator~to request
   invites to each of the calendars below---the download links in the
-  lab manual are read-only!}  Our lab's scheduling practices and
+  lab manual are read-only!}Our lab's scheduling practices and
 policies are intended to facilitate lab member interactions between
 ourselves, our collaborators, and our experimental participants.
 There are three basic tools the lab uses to organize and schedule
@@ -1023,8 +1023,9 @@ schedules of grad students and undergraduates.
   with \director.  Most meetings with \director~happen on Wednesdays.
 \end{itemize}
 
- \subsection{Attendance policy}
- In general, we expect full time employees to be in the lab during
+ \newthought{Attendance policy}
+ 
+\noindent In general, we expect full time employees to be in the lab during
  ``standard'' working hours---roughly between 9 AM and 5 PM.  The
  precise range of hours you work is less important to us than putting
  in an effort to help form a cohesive lab culture where lab members
