Editing to add my name

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1601,6 +1601,7 @@ need access to RAPPORT then let \director~know.
 \item Kelly Rutherford (2020 -- )
 \item Helen Lu (2020 -- )
 \item Chris Jun (2020 -- )
+\item Tehut Biru (2020 — )
 \end{list}
 \end{multicols}
 
