--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1559,6 +1559,7 @@ need access to RAPPORT then let \director~know.
 \item Chris Jun (2020 -- )
 \item Chris Suh (2020 -- )
 \item Tehut Biru (2020 -- )
+\item Tyler Chen (2020 -- )
 \end{list}
 \end{multicols}
 
