--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1561,6 +1561,7 @@ need access to RAPPORT then let \director~know.
 \item Tehut Biru (2020 -- )
 \item Tyler Chen (2020 -- )
 \item Darren Gu (2020 -- )
+\item Aidan Adams (2021 -- )
 \end{list}
 \end{multicols}
 
