Onboarding Edits to Lab Manual
Edited the latex file that created the Lab Manual to include my name. Recompiled it so that the pdf updated with current information

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1561,6 +1561,7 @@ need access to RAPPORT then let \director~know.
 \item Tehut Biru (2020 -- )
 \item Tyler Chen (2020 -- )
 \item Darren Gu (2020 -- )
+\item Kunal Jha (2020 --)
 \end{list}
 \end{multicols}
 
