Added my name to lab manual

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1564,6 +1564,7 @@ need access to RAPPORT then let \director~know.
 \item Kunal Jha (2020 --)
 \item Aidan Adams (2021 -- )
 \item Damini Kohli (2021 -- )
+\item Natalie Schreder (2021 -- )
 \end{list}
 \end{multicols}
 
