added my name to the lab manual.

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1566,6 +1566,7 @@ need access to RAPPORT then let \director~know.
 \item Damini Kohli (2021 -- )
 \item Daniel Ha (2021 -- )
 \item Natalie Schreder (2021 -- )
+\item Swestha Jain (2021 -- )
 \end{list}
 \end{multicols}
 
