added name to .tex (need to recompile .pdf still)

--- a/lab_manual.tex
+++ b/lab_manual.tex
@@ -1516,6 +1516,7 @@ need access to RAPPORT then let \director~know.
 \item Lucy Owen (2016 -- )
 \item Kirsten Ziman (2017 -- )
 \item Caroline Lee (2019 -- )
+\item Mark Taylor (2021 -- )
 \end{list}
 \end{multicols}
 
